--- a/jins/web/WEB-INF/views/vue1.html
+++ b/jins/web/WEB-INF/views/vue1.html
@@ -2,6 +2,14 @@
 <html>
 <head>
     <title>Vue Sample</title>
+    <style>
+        .fade-enter-active, .fade-leave-active{
+        transition : opacity .5s;
+        }
+        .fade-enter, .fade-leave-to{
+        opacity : 0;
+        }
+    </style>
 </head>
 <body>
 
@@ -10,7 +18,76 @@
     <child-component v-bind:passed-data="message"></child-component>
 </div>
 
+<div id="app-2">
+    <span v-bind:title="message">
+        내 위에 잠시 마우스를 올리면 바인딩 된 title을 볼 수 있습니다.
+    </span>
+</div>
+
+<div id="app-3">
+    <p v-if="seen">이제 나를 볼 수 있어요</p>
+</div>
+
+<div id="app-4">
+    <ol>
+        <li v-for="todo in todos">
+            {{todo.text}}
+        </li>
+    </ol>
+</div>
+
+<div id="app-5">
+    <p>{{message}}</p>
+    <button v-on:click="reverseMessage">메시지 뒤집기</button>
+</div>
+
+<div id="app-6">
+    <p>{{message}}</p>
+    <input v-model="message" />
+</div>
+
+<div id="demo">
+    <button v-on:click="show = !show">
+        Toggle
+    </button>
+    <transition name="fade">
+        <p v-if="show">hello</p>
+        <p v-if="!show">unhappy</p>
+    </transition>
+</div>
+
+<div id="app-7">
+    <ol>
+        <todo-item v-for="item in groceryList"
+                    v-bind:todo="item"
+                    v-bind:key="item.id">
+        </todo-item>
+    </ol>
+</div>
+
+<div id="example">
+    <p>원본 메시지 : "{{message}}"</p>
+    <p>뒤집히도록 계산된 메시지 : "{{reversedMessage}}"</p>
+</div>
+
+<div id="demo2">
+    {{fullName}}
+</div>
+
+<div id="watch-example">
+    <p>
+        yes/no 질문을 물어보세요:
+        <input v-model="question" />
+    </p>
+    <p>{{answer}}</p>
+</div>
+
+<div v-bind:class="classObject"></div>
+
 <script src="https://unpkg.com/vue@2.3.3"></script>
+<script src="https://unpkg.com/axios@0.12.0/dist/axios.min.js"></script>
+<script src="https://unpkg.com/lodash@4.13.1/lodash.min.js"></script>
+
 <script>
 
     // 하위 컴포넌트 - 아래 상위 컴포넌트의 data 의 message 를 passedData 에 넘겨받음
@@ -27,6 +104,200 @@
         }
     });
 
+    var app2 = new Vue({
+        el : "#app-2",
+        data : {
+            message : "이 페이지는 " + new Date() + "에 로드 되었습니다."
+        }
+    });
+
+    var app3 = new Vue({
+        el : "#app-3",
+        data : {
+            seen : true
+        }
+    });
+
+    var app4 = new Vue({
+        el : "#app-4",
+        data : {
+            todos : [
+                {text : "Javascript 배우기"},
+                {text : "Vue 배우기"},
+                {text : "무언가 멋진 것을 만들기"}
+            ]
+        }
+    });
+
+    var app5 = new Vue({
+        el : "#app-5",
+        data : {
+            message : "안녕하세요! Vue.js!"
+        },
+        methods : {
+            reverseMessage : function(){
+                debugger;
+                this.message = this.message.split("").reverse().join("")
+            }
+        }
+    });
+
+    var app6 = new Vue({
+        el : "#app-6",
+        data : {
+            message : "안녕하세요 Vue!"
+        }
+    });
+
+    Vue.component("todo-item", {
+        // 이제 todo-item 컴포넌트는 "prop" 이라고 하는
+        // 사용자 정의 속성 같은 것을 입력받을 수 있습니다.
+        // 이 prop은 todo라는 이름으로 정의했습니다.
+        props : ["todo"],
+        template : "<li>{{todo.text}}</li>"
+    });
+
+    var app7 = new Vue({
+        el : "#app-7",
+        data : {
+            groceryList : [
+                    {id : 0, text : "Vegetables"},
+                    {id : 1, text : "Cheese"},
+                    {id : 2, text : "Whatever else humans are supposed to eat"}
+            ]
+        }
+    });
+
+    var damo = new Vue({
+        el : "#demo",
+        data : {
+            show : true
+        }
+    });
+
+    var data = {a : 1};
+    var vm = new Vue({
+        data : data
+    });
+
+    console.log(vm.a === data.a);
+
+    vm.a = 2;
+
+    console.log(data.a);
+
+    data.a = 3;
+
+    console.log(vm.a);
+
+    var vm2 = new Vue({
+        el : "#example",
+        data : {
+            message : "안녕하세요"
+        },
+        computed : {
+            reversedMessage : function(){
+                // "this" 는 vm 인스턴스를 가리킵니다.
+                return this.message.split("").reverse().join("")
+            }
+        }
+    });
+
+    var vm3 = new Vue({
+        el : "#demo2",
+        /*data : {
+            firstName : "Foo",
+            lastName : "Bar",
+            fullName : "Foo Bar"
+        },
+        watch : {
+            firstName : function(val){
+                this.fullName = val + " " + this.lastName
+            },
+            lastName : function(val){
+                this.fullName = this.firstName + " " + val
+            }
+        }*/
+        data : {
+            firstName : "Foo",
+            lastName : "Bar"
+        },
+        computed : {
+            fullName : function(){
+//                return this.firstName + " " + this.lastName
+            },
+            fullName : {
+                get : function(){
+                    return this.firstName + " " + this.lastName
+                },
+                set : function(newValue){
+                    var names = newValue.split(" ");
+                    this.firstName = names[0];
+                    this.lastName = names[names.length -1];
+                }
+            }
+        }
+    });
+
+    var watchExampleM = new Vue({
+        el : "#watch-example",
+        data : {
+            question : "",
+            answer : "질문을 하기 전까지는 대답할 수 없습니다."
+        },
+        watch : {
+            // 질문이 변경될 때 마다 이 기능이 실행됩니다.
+            question : function (newQuestion){
+                this.answer = "입력을 기다리는 중...";
+                this.getAnswer();
+            }
+        },
+        methods : {
+            // _.debounce는 lodash가 제공하는 기능으로
+            // 특히 시간이 많이 소요되는 작업을 실행할 수 있는 빈도를 제한합니다.
+            // 이 경우, 우리는 yesno.wtf/api 에 액세스 하는 빈도를 제한하고,
+            // 사용자가 ajax요청을 하기 전에 타이핑을 완전히 마칠 때까지 기다리길 바랍니다.
+            // _.debounce 함수(또는 이와 유사한 _.throttle)에 대한
+            // 자세한 내용을 보려면 https://lodash.com/docs#debounce 를 방문하세요.
+            getAnswer : _.debounce(
+                function(){
+                    if(this.question.indexOf("?") === -1){
+                        this.answer = "질문에는 일번적으로 물음표가 포함 됩니다. ;-";
+                        return;
+                    }
+                    this.answer = "생각중...";
+                    var vm = this;
+                    axios.get("https://yesno.wtf/api")
+                            .then(function(response){
+                                vm.answer = _.capitalize(response.data.answer);
+                            })
+                            .catch(function (error) {
+                                vm.answer = "에러! API 요청에 오류가 있습니다." + error;
+                            })
+                },
+                // 사용자가 입력을 기다리는 시간(밀리세컨드) 입니다.
+                500
+            )
+        }
+    });
+
+    var test = new Vue({
+        data: {
+            isActive: true,
+            error: null
+        },
+        computed: {
+            classObject: function () {
+                return {
+                    active: this.isActive && !this.error,
+                    'text-danger': this.error && this.error.type === 'fatal'
+                }
+            }
+        }
+    });
+
+
 </script>
+
 </body>
 </html>
